--- a/JeffreyChanResume.tex
+++ b/JeffreyChanResume.tex
@@ -20,7 +20,7 @@
 \textbf{Binghamton University, State University of New York} \hfill Expected 05/2017 \\
     	Thomas J. Watson School of Engineering and Applied Science \\
 	Bachelor of Science in Computer Science \\
-	Cumulative GPA: 4.0/4.0 | Watson School Dean’s Honors List: Fall 2015 – Spring 2016 
+	Cumulative GPA: 4.0/4.0 \textbar~Watson School Dean's Honors List: Fall 2015 - Fall 2016 
 	\sectionSpace
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
