Fixed Aura Project title

--- a/JeffreyChanResume.tex
+++ b/JeffreyChanResume.tex
@@ -56,7 +56,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \textbf{PROJECTS} \\ [-10.5pt]
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}\\
-{\it Aura Project – Open Source MMORPG Server Emulator}\\ [-11pt]  
+{\it Aura Project (Open Source MMORPG Server Emulator)}\\ [-11pt]  
 	\begin{itemize} \itemsep -1pt % reduce space between items 
 	\item Contributed to an open source community involved in reverse engineering an online multiplayer game.
  	\item Implemented a shutdown command to notify users, save server variables, and switch channels to maintenance.
