Minor project description changes

--- a/JeffreyChanResume.tex
+++ b/JeffreyChanResume.tex
@@ -74,14 +74,14 @@
 	\begin{itemize} \itemsep -1pt % reduce space between items 
 	\item Designed the board game layout using XML and planned the flow of events in the game using class diagrams.
  	\item Combined sequences of images using the AnimationDrawable class to create an interactive user interface.
-	\item Utilized Git for version control among four project collaborators.
+	\item Published the app on the Google Play Store.
 	\end{itemize}
 	\itemSpace
 {\it Bird Fetcher (Alexa Skill)}\\ [-11pt]  
 	\begin{itemize} \itemsep -1pt % reduce space between items 
 	\item Developed an Alexa skill for the Echo \& Echo Dot allowing users to look up the 10 most recent bird sightings in a city.
  	\item Incorporated the Google Maps API to get the latitude/longitude of a city and passed the coordinates to the eBird API.
-	\item Published the skill to the Amazon Alexa Skill store.
+	\item Published the skill on the Amazon Alexa Skill store.
 	\end{itemize}
 	\itemSpace
 {\it Big Bowl (Web Application)}\\ [-11pt]  
