--- a/JeffreyChanResume.tex
+++ b/JeffreyChanResume.tex
@@ -26,9 +26,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \textbf{SKILLS} \\ [-10.5pt]
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}\\
-{\it Languages}~: Python, C++, C, JavaScript, Java, Ruby, x86 Assembler, IBM Assembler \\
+{\it Languages}~: Python, C++, C, JavaScript, HTML, CSS, Java, Ruby, x86 Assembler, IBM Assembler \\
 {\it Operating Systems}~: Windows, Linux, z/VM \\
-{\it Tools}~: Bash, Vim, Git, Cygwin, Travis CI, Visual Studio, Android Studio, Cloud9, Heroku, PostgreSQL \\
+{\it Tools}~: Bash, Vim, Git, Cygwin, Django, Travis CI, Visual Studio, Android Studio, Cloud9, Heroku, PostgreSQL \\
 {\it Other}~: Agile, Behavior-driven Development, Test-driven Development, Object-Oriented Programming
 \sectionSpace
 
