Changed Cloud9 to Cloud9 IDE

--- a/JeffreyChanResume.tex
+++ b/JeffreyChanResume.tex
@@ -28,7 +28,7 @@
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}\\
 {\it Languages}~: Python, C++, C, JavaScript, HTML, CSS, Java, Ruby, x86 Assembler, IBM Assembler \\
 {\it Operating Systems}~: Windows, Linux, z/VM \\
-{\it Tools}~: Bash, Vim, Git, Cygwin, Django, Travis CI, Visual Studio, Android Studio, Cloud9, Heroku, PostgreSQL \\
+{\it Tools}~: Bash, Vim, Git, Cygwin, Django, Travis CI, Visual Studio, Android Studio, Cloud9 IDE, Heroku, PostgreSQL \\
 {\it Other}~: Agile, Behavior-driven Development, Test-driven Development, Object-Oriented Programming
 \sectionSpace
 
