--- a/JeffreyChanResume.tex
+++ b/JeffreyChanResume.tex
@@ -2,11 +2,10 @@
 \documentclass[10.5pt]{res}
 \usepackage[margin=0.5in]{geometry}
 \usepackage{helvetica}
-\textwidth = 10cm
 \columnwidth = 10cm
 \newsectionwidth{0cm}
 \textwidth=7.5in
-\newcommand{\sectionSpace}{\vspace{-3pt}}
+\newcommand{\sectionSpace}{\vspace{-3.5pt}}
 \newcommand{\itemSpace}{\vspace{-8pt}}
 %\usepackage{showframe}
 \begin{document} 
@@ -26,10 +25,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \textbf{SKILLS} \\ [-10.5pt]
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}\\
-{\it Languages}~: Python, C++, C, JavaScript, HTML, CSS, Java, Ruby, x86 Assembler, IBM Assembler \\
-{\it Operating Systems}~: Windows, Linux, z/VM \\
-{\it Tools}~: Bash, Vim, Git, Cygwin, Django, Travis CI, Visual Studio, Android Studio, Cloud9 IDE, Heroku, PostgreSQL \\
-{\it Other}~: Agile, Behavior-driven Development, Test-driven Development, Object-Oriented Programming
+\underline{\it Languages}~: Python, C++, C, JavaScript, HTML, CSS, Java, Ruby, x86 Assembler, IBM Assembler \\
+{\vspace{-10.5pt}} \\
+\underline{\it Operating Systems}~: Windows, Linux, z/VM \\
+{\vspace{-10.5pt}} \\
+\underline{\it Tools}~: Bash, Vim, Git, Cygwin, Django, Travis CI, Visual Studio, Android Studio, Cloud9 IDE, Heroku, PostgreSQL \\
+{\vspace{-10.5pt}} \\
+\underline{\it Other}~: Agile, Behavior-driven Development, Test-driven Development, Object-Oriented Programming
 \sectionSpace
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -95,7 +97,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \textbf{OTHER EXPERIENCE} \\ [-10.5pt]
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}\\
-{\it Learning and Representation in Cognition Lab Assistant, Binghamton University}\hfill 08/2016 - 05/2017 \\ [-11pt]
+{\it Learning and Representation in Cognition Lab Assistant, Binghamton University}\hfill 08/2016 - 05/2017 \\ [-15pt]
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{resume}
 \end{document}
