--- a/JeffreyChanResume.tex
+++ b/JeffreyChanResume.tex
@@ -21,7 +21,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \textbf{EDUCATION} \\ [-10.5pt]
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}\\
-\textbf{Binghamton University, State University of New York} \hfill Expected 05/2017 \\
+\textbf{Binghamton University, State University of New York} \hfill 05/2017 \\
     	Thomas J. Watson School of Engineering and Applied Science \\
 	Bachelor of Science in Computer Science \\
 	Cumulative GPA: 4.0/4.0 \textbar~Watson School Dean's Honors List: Fall 2015 - Fall 2016 
