Update with final GPA

--- a/JeffreyChanResume.tex
+++ b/JeffreyChanResume.tex
@@ -24,7 +24,7 @@
 \textbf{Binghamton University, State University of New York} \hfill 05/2017 \\
     	Thomas J. Watson School of Engineering and Applied Science \\
 	Bachelor of Science in Computer Science \\
-	Cumulative GPA: 4.0/4.0 \textbar~Watson School Dean's Honors List: Fall 2015 - Fall 2016 
+	Cumulative GPA: 3.98/4.00 \textbar~Watson School Dean's Honors List: Fall 2015 - Spring 2017 
 	\sectionSpace
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
