--- a/JeffreyChanResume.tex
+++ b/JeffreyChanResume.tex
@@ -43,7 +43,7 @@
 \textbf{PROFESSIONAL EXPERIENCE} \\ [-10.5pt]
 \makebox[\linewidth]{\rule{\textwidth}{0.4pt}}\\
 \textbf{IBM Corporation at Poughkeepsie, NY} \\
-{\it Firmware Engineer} \hfill Starting 06/2017 \\
+{\it Firmware Engineer} \hfill 06/2017 - Present\,\\
 {\vspace{-11pt}} \\
 {\it System z LPAR Firmware Engineering Intern} \hfill 05/2016 - 08/2016 \\ [-11pt]  
 	\begin{itemize} \itemsep -1pt % reduce space between items 
